5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4485/executions/1708_3060.log
== TEST (2019-04-29 15:05:00) 
-- CODE:
d1=input("valor sorteado?")
d2=input("valor sorteado?")
r= input("numero de rodadas?")
-- OUTPUT:
46.66
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:16:08) 
-- CODE:
d1=int(input("valor sorteado?"))
d2=int(input("valor sorteado?"))
r= int(input("numero de rodadas?"))
if(d1+d2==12)
	print(("CONSTRICAO")
		  and(d1+d2+1))
-- ERROR:
File "XXXX", line 4
    if(d1+d2==12)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:16:23) 
-- CODE:
d1=int(input("valor sorteado?"))
d2=int(input("valor sorteado?"))
r= int(input("numero de rodadas?"))
if(d1+d2==12)
	print(("CONSTRICAO")and
			(d1+d2+1))
-- ERROR:
File "XXXX", line 4
    if(d1+d2==12)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:16:47) 
-- CODE:
d1=int(input("valor sorteado?"))
d2=int(input("valor sorteado?"))
r= int(input("numero de rodadas?"))
if(d1+d2==12)
	print("CONSTRICAO")
	print(d1+d2+1)
-- ERROR:
File "XXXX", line 4
    if(d1+d2==12)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:16:55) 
-- CODE:
d1=int(input("valor sorteado?"))
d2=int(input("valor sorteado?"))
r= int(input("numero de rodadas?"))
if(d1+d2==12):
	print("CONSTRICAO")
	print(d1+d2+1)
-- ERROR:
File "XXXX", line 4
    if(d1+d2==12)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:17:23) 
-- CODE:
d1=int(input("valor sorteado?"))
d2=int(input("valor sorteado?"))
r= int(input("numero de rodadas?"))
if(d1+d2==12):
	print("CONSTRICAO")and
	print(d1+d2+1)
-- ERROR:
File "XXXX", line 5
    print("CONSTRICAO")and
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:17:37) 
-- CODE:
d1=int(input("valor sorteado?"))
d2=int(input("valor sorteado?"))
r= int(input("numero de rodadas?"))
if(d1+d2==12):
	print("CONSTRICAO")
	and(d1+d2+1)
-- ERROR:
File "XXXX", line 6
    and(d1+d2+1)
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 15:17:40) 
-- CODE:
d1=int(input("valor sorteado?"))
d2=int(input("valor sorteado?"))
r= int(input("numero de rodadas?"))
if(d1+d2==12):
	print("CONSTRICAO")
	and(d1+d2+1)
-- EXECUTION TIME:
0.218741
-- ERROR:
  File "/home/codebench/codes/1708/3060/main.py", line 6
    and(d1+d2+1)
      ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:17:54) 
-- CODE:
d1=int(input("valor sorteado?"))
d2=int(input("valor sorteado?"))
r= int(input("numero de rodadas?"))
if(d1+d2==12):
	print("CONSTRICAO",(d1+d2+1)
-- ERROR:
File "XXXX", line 6
    
                                 ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:18:00) 
-- CODE:
d1=int(input("valor sorteado?"))
d2=int(input("valor sorteado?"))
r= int(input("numero de rodadas?"))
if(d1+d2==12):
	print("CONSTRICAO",d1+d2+1)
-- ERROR:
File "XXXX", line 6
    
                                 ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:18:20) 
-- CODE:
d1=int(input("valor sorteado?"))
d2=int(input("valor sorteado?"))
r= int(input("numero de rodadas?"))
if(d1+d2==12):
	print("CONSTRICAO")
-- ERROR:
File "XXXX", line 6
    
                                 ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:18:41) 
-- CODE:
d1=int(input("valor sorteado?"))
d2=int(input("valor sorteado?"))
r= int(input("numero de rodadas?"))
if(d1+d2==12):
	print("CONSTRICAO")
	and(d1+d2+1)
-- ERROR:
File "XXXX", line 6
    and(d1+d2+1)
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 15:18:46) 
-- CODE:
d1=int(input("valor sorteado?"))
d2=int(input("valor sorteado?"))
r= int(input("numero de rodadas?"))
if(d1+d2==12):
	print("CONSTRICAO")
	print(d1+d2+1)
-- EXECUTION TIME:
0.138944
-- TEST CASE 1:
---- input:
5
3
8
---- correct output:
FRAQUEZA
15
---- user output:

-- TEST CASE 2:
---- input:
7
8
5
---- correct output:
Entrada invalida
---- user output:

-- TEST CASE 3:
---- input:
1
1
9
---- correct output:
POLEN
27
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:18:47) 
-- CODE:
d1=int(input("valor sorteado?"))
d2=int(input("valor sorteado?"))
r= int(input("numero de rodadas?"))
if(d1+d2==12):
	print("CONSTRICAO")
	print(d1+d2+1)
-- ERROR:
File "XXXX", line 6
    and(d1+d2+1)
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:21:37) 
-- CODE:
d1=int(input("valor sorteado?"))
d2=int(input("valor sorteado?"))
r= int(input("numero de rodadas?"))
if(d1+d2==12):
	print("CONSTRICAO")
	print(d1+d2+1)
elif(d1+d2>5):
	print("POLEN")
	print((d1+d2+1)*r)
else:
	print("FRAQUESA")
	print(d1*d2)
-- OUTPUT:
POLEN
72
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:22:00) 
-- CODE:
d1=int(input("valor sorteado?"))
d2=int(input("valor sorteado?"))
r= int(input("numero de rodadas?"))
if(d1+d2==12):
	print("CONSTRICAO")
	print(d1+d2+1)
elif(d1+d2>5):
	print("POLEN")
	print((d1+d2+1)*r)
else:
	print("FRAQUESA")
	print(d1*d2)
-- OUTPUT:
POLEN
72
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 15:22:11) 
-- CODE:
d1=int(input("valor sorteado?"))
d2=int(input("valor sorteado?"))
r= int(input("numero de rodadas?"))
if(d1+d2==12):
	print("CONSTRICAO")
	print(d1+d2+1)
elif(d1+d2>5):
	print("POLEN")
	print((d1+d2+1)*r)
else:
	print("FRAQUESA")
	print(d1*d2)
-- EXECUTION TIME:
0.191086
-- TEST CASE 1:
---- input:
5
3
8
---- correct output:
FRAQUEZA
15
---- user output:
POLEN
72
-- TEST CASE 2:
---- input:
7
8
5
---- correct output:
Entrada invalida
---- user output:
POLEN
80
-- TEST CASE 3:
---- input:
1
1
9
---- correct output:
POLEN
27
---- user output:
FRAQUESA
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:22:32) 
-- CODE:
d1=int(input("valor sorteado?"))
d2=int(input("valor sorteado?"))
r= int(input("numero de rodadas?"))
if(d1+d2==12):
	print("CONSTRICAO")
	print(d1+d2+1)
elif(d1+d2>5):
	print("POLEN")
	print((d1+d2+1)*r)
else:
	print("FRAQUESA")
	print(d1*d2)
-- OUTPUT:
POLEN
72
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 15:23:38) 
-- CODE:
d1=int(input("valor sorteado?"))
d2=int(input("valor sorteado?"))
r= int(input("numero de rodadas?"))
if(d1+d2==12):
	print("CONSTRICAO")
	print(d1+d2+1)
elif(d1+d2>5):
	print("POLEN")
	print((d1+d2+1)*r)
else:
	print("FRAQUESA")
	print(d1*d2)
-- EXECUTION TIME:
0.157065
-- TEST CASE 1:
---- input:
5
3
8
---- correct output:
FRAQUEZA
15
---- user output:
POLEN
72
-- TEST CASE 2:
---- input:
7
8
5
---- correct output:
Entrada invalida
---- user output:
POLEN
80
-- TEST CASE 3:
---- input:
1
1
9
---- correct output:
POLEN
27
---- user output:
FRAQUESA
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:25:11) 
-- CODE:
d1=float(input("valor sorteado?"))
d2=int(input("valor sorteado?"))
r= int(input("numero de rodadas?"))
if(d1+d2==12):
	print("CONSTRICAO")
	print(d1+d2+1)
elif(d1+d2>5):
	print("POLEN")
	print((d1+d2+1)*r)
else:
	print("FRAQUESA")
	print(d1*d2)
-- OUTPUT:
POLEN
72.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 15:25:13) 
-- CODE:
d1=float(input("valor sorteado?"))
d2=int(input("valor sorteado?"))
r= int(input("numero de rodadas?"))
if(d1+d2==12):
	print("CONSTRICAO")
	print(d1+d2+1)
elif(d1+d2>5):
	print("POLEN")
	print((d1+d2+1)*r)
else:
	print("FRAQUESA")
	print(d1*d2)
-- EXECUTION TIME:
0.180881
-- TEST CASE 1:
---- input:
5
3
8
---- correct output:
FRAQUEZA
15
---- user output:
POLEN
72.0
-- TEST CASE 2:
---- input:
7
8
5
---- correct output:
Entrada invalida
---- user output:
POLEN
80.0
-- TEST CASE 3:
---- input:
1
1
9
---- correct output:
POLEN
27
---- user output:
FRAQUESA
1.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 15:25:20) 
-- CODE:
d1=float(input("valor sorteado?"))
d2=float(input("valor sorteado?"))
r= int(input("numero de rodadas?"))
if(d1+d2==12):
	print("CONSTRICAO")
	print(d1+d2+1)
elif(d1+d2>5):
	print("POLEN")
	print((d1+d2+1)*r)
else:
	print("FRAQUESA")
	print(d1*d2)
-- EXECUTION TIME:
0.159706
-- TEST CASE 1:
---- input:
5
3
8
---- correct output:
FRAQUEZA
15
---- user output:
POLEN
72.0
-- TEST CASE 2:
---- input:
7
8
5
---- correct output:
Entrada invalida
---- user output:
POLEN
80.0
-- TEST CASE 3:
---- input:
1
1
9
---- correct output:
POLEN
27
---- user output:
FRAQUESA
1.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:25:21) 
-- CODE:
d1=float(input("valor sorteado?"))
d2=float(input("valor sorteado?"))
r= int(input("numero de rodadas?"))
if(d1+d2==12):
	print("CONSTRICAO")
	print(d1+d2+1)
elif(d1+d2>5):
	print("POLEN")
	print((d1+d2+1)*r)
else:
	print("FRAQUESA")
	print(d1*d2)
-- OUTPUT:
POLEN
72.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 15:25:27) 
-- CODE:
d1=float(input("valor sorteado?"))
d2=float(input("valor sorteado?"))
r= float(input("numero de rodadas?"))
if(d1+d2==12):
	print("CONSTRICAO")
	print(d1+d2+1)
elif(d1+d2>5):
	print("POLEN")
	print((d1+d2+1)*r)
else:
	print("FRAQUESA")
	print(d1*d2)
-- EXECUTION TIME:
0.134987
-- TEST CASE 1:
---- input:
5
3
8
---- correct output:
FRAQUEZA
15
---- user output:
POLEN
72.0
-- TEST CASE 2:
---- input:
7
8
5
---- correct output:
Entrada invalida
---- user output:
POLEN
80.0
-- TEST CASE 3:
---- input:
1
1
9
---- correct output:
POLEN
27
---- user output:
FRAQUESA
1.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 15:25:49) 
-- CODE:
d1=int(input("valor sorteado?"))
d2=float(input("valor sorteado?"))
r= float(input("numero de rodadas?"))
if(d1+d2==12):
	print("CONSTRICAO")
	print(d1+d2+1)
elif(d1+d2>5):
	print("POLEN")
	print((d1+d2+1)*r)
else:
	print("FRAQUESA")
	print(d1*d2)
-- EXECUTION TIME:
0.166462
-- TEST CASE 1:
---- input:
5
3
8
---- correct output:
FRAQUEZA
15
---- user output:
POLEN
72.0
-- TEST CASE 2:
---- input:
7
8
5
---- correct output:
Entrada invalida
---- user output:
POLEN
80.0
-- TEST CASE 3:
---- input:
1
1
9
---- correct output:
POLEN
27
---- user output:
FRAQUESA
1.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 15:25:55) 
-- CODE:
d1=int(input("valor sorteado?"))
d2=int(input("valor sorteado?"))
r= float(input("numero de rodadas?"))
if(d1+d2==12):
	print("CONSTRICAO")
	print(d1+d2+1)
elif(d1+d2>5):
	print("POLEN")
	print((d1+d2+1)*r)
else:
	print("FRAQUESA")
	print(d1*d2)
-- EXECUTION TIME:
0.153865
-- TEST CASE 1:
---- input:
5
3
8
---- correct output:
FRAQUEZA
15
---- user output:
POLEN
72.0
-- TEST CASE 2:
---- input:
7
8
5
---- correct output:
Entrada invalida
---- user output:
POLEN
80.0
-- TEST CASE 3:
---- input:
1
1
9
---- correct output:
POLEN
27
---- user output:
FRAQUESA
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:25:56) 
-- CODE:
d1=int(input("valor sorteado?"))
d2=int(input("valor sorteado?"))
r= float(input("numero de rodadas?"))
if(d1+d2==12):
	print("CONSTRICAO")
	print(d1+d2+1)
elif(d1+d2>5):
	print("POLEN")
	print((d1+d2+1)*r)
else:
	print("FRAQUESA")
	print(d1*d2)
-- OUTPUT:
POLEN
72.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 15:25:57) 
-- CODE:
d1=int(input("valor sorteado?"))
d2=int(input("valor sorteado?"))
r= float(input("numero de rodadas?"))
if(d1+d2==12):
	print("CONSTRICAO")
	print(d1+d2+1)
elif(d1+d2>5):
	print("POLEN")
	print((d1+d2+1)*r)
else:
	print("FRAQUESA")
	print(d1*d2)
-- EXECUTION TIME:
0.164014
-- TEST CASE 1:
---- input:
5
3
8
---- correct output:
FRAQUEZA
15
---- user output:
POLEN
72.0
-- TEST CASE 2:
---- input:
7
8
5
---- correct output:
Entrada invalida
---- user output:
POLEN
80.0
-- TEST CASE 3:
---- input:
1
1
9
---- correct output:
POLEN
27
---- user output:
FRAQUESA
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:26:12) 
-- CODE:
d1=int(input("valor sorteado?"))
d2=int(input("valor sorteado?"))
r= input("numero de rodadas?")
if(d1+d2==12):
	print("CONSTRICAO")
	print(d1+d2+1)
elif(d1+d2>5):
	print("POLEN")
	print((d1+d2+1)*r)
else:
	print("FRAQUESA")
	print(d1*d2)
-- OUTPUT:
POLEN
888888888
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 15:26:14) 
-- CODE:
d1=int(input("valor sorteado?"))
d2=int(input("valor sorteado?"))
r= input("numero de rodadas?")
if(d1+d2==12):
	print("CONSTRICAO")
	print(d1+d2+1)
elif(d1+d2>5):
	print("POLEN")
	print((d1+d2+1)*r)
else:
	print("FRAQUESA")
	print(d1*d2)
-- EXECUTION TIME:
0.208513
-- TEST CASE 1:
---- input:
5
3
8
---- correct output:
FRAQUEZA
15
---- user output:
POLEN
888888888
-- TEST CASE 2:
---- input:
7
8
5
---- correct output:
Entrada invalida
---- user output:
POLEN
5555555555555555
-- TEST CASE 3:
---- input:
1
1
9
---- correct output:
POLEN
27
---- user output:
FRAQUESA
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 15:28:24) 
-- CODE:
d1=int(input("valor sorteado?"))
d2=int(input("valor sorteado?"))
r= input("numero de rodadas?")
if(d1+d2==12):
	print("CONSTRICAO")
	print(d1+d2+1)
elif(d1+d2>5):
	print("POLEN")
	print((d1+d2+1)*r)
elif:
	print("FRAQUESA")
	print(d1*d2)
else(r>7):
	print("Entrada invalida")
-- EXECUTION TIME:
0.177696
-- ERROR:
  File "/home/codebench/codes/1708/3060/main.py", line 10
    elif:
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 15:31:09) 
-- CODE:
d1=int(input("valor sorteado?"))
d2=int(input("valor sorteado?"))
r= input("numero de rodadas?")
if(d1+d2==12):
	print("CONSTRICAO")
	print(d1+d2+1)
elif(d1+d2>5):
	print("POLEN")
	print((d1+d2+1)*r)
elif(d1>7) and (d2>7):
	print("Entrada invalida")
else:
	print("FAQUEZA")
	print(d1*d2)
-- EXECUTION TIME:
0.131361
-- TEST CASE 1:
---- input:
5
3
8
---- correct output:
FRAQUEZA
15
---- user output:
POLEN
888888888
-- TEST CASE 2:
---- input:
7
8
5
---- correct output:
Entrada invalida
---- user output:
POLEN
5555555555555555
-- TEST CASE 3:
---- input:
1
1
9
---- correct output:
POLEN
27
---- user output:
FAQUEZA
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:31:10) 
-- CODE:
d1=int(input("valor sorteado?"))
d2=int(input("valor sorteado?"))
r= input("numero de rodadas?")
if(d1+d2==12):
	print("CONSTRICAO")
	print(d1+d2+1)
elif(d1+d2>5):
	print("POLEN")
	print((d1+d2+1)*r)
elif(d1>7) and (d2>7):
	print("Entrada invalida")
else:
	print("FAQUEZA")
	print(d1*d2)
-- OUTPUT:
POLEN
888888888
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:31:47) 
-- CODE:
d1=int(input("valor sorteado?"))
d2=int(input("valor sorteado?"))
r= input("numero de rodadas?")
if(d1+d2==12):
	print("CONSTRICAO")
	print(d1+d2+1)
elif(d1+d2>5):
	print("POLEN")
	print((d1+d2+1)*r)
elif(d1<7) and (d2<7):
	print("Entrada invalida")
else:
	print("FAQUEZA")
	print(d1*d2)
-- OUTPUT:
POLEN
888888888
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 15:32:29) 
-- CODE:
d1=int(input("valor sorteado?"))
d2=int(input("valor sorteado?"))
r= input("numero de rodadas?")
if(d1+d2==12):
	print("CONSTRICAO")
	print(d1+d2+1)
elif(d1+d2>5):
	print("POLEN")
	print((d1+d2+1)*r)
elif(d1=>7) and (d2=>7):
	print("Entrada invalida")
else:
	print("FAQUEZA")
	print(d1*d2)
-- EXECUTION TIME:
0.137676
-- ERROR:
  File "/home/codebench/codes/1708/3060/main.py", line 10
    elif(d1=>7) and (d2=>7):
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:32:29) 
-- CODE:
d1=int(input("valor sorteado?"))
d2=int(input("valor sorteado?"))
r= input("numero de rodadas?")
if(d1+d2==12):
	print("CONSTRICAO")
	print(d1+d2+1)
elif(d1+d2>5):
	print("POLEN")
	print((d1+d2+1)*r)
elif(d1=>7) and (d2=>7):
	print("Entrada invalida")
else:
	print("FAQUEZA")
	print(d1*d2)
-- ERROR:
File "XXXX", line 10
    elif(d1=>7) and (d2=>7):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 15:32:42) 
-- CODE:
d1=int(input("valor sorteado?"))
d2=int(input("valor sorteado?"))
r= input("numero de rodadas?")
if(d1+d2==12):
	print("CONSTRICAO")
	print(d1+d2+1)
elif(d1+d2>5):
	print("POLEN")
	print((d1+d2+1)*r)
elif(d1=>7) or (d2=>7):
	print("Entrada invalida")
else:
	print("FAQUEZA")
	print(d1*d2)
-- EXECUTION TIME:
0.178111
-- ERROR:
  File "/home/codebench/codes/1708/3060/main.py", line 10
    elif(d1=>7) or (d2=>7):
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 15:32:44) 
-- CODE:
d1=int(input("valor sorteado?"))
d2=int(input("valor sorteado?"))
r= input("numero de rodadas?")
if(d1+d2==12):
	print("CONSTRICAO")
	print(d1+d2+1)
elif(d1+d2>5):
	print("POLEN")
	print((d1+d2+1)*r)
elif(d1=>7) or (d2=>7):
	print("Entrada invalida")
else:
	print("FAQUEZA")
	print(d1*d2)
-- EXECUTION TIME:
0.145924
-- ERROR:
  File "/home/codebench/codes/1708/3060/main.py", line 10
    elif(d1=>7) or (d2=>7):
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 15:32:44) 
-- CODE:
d1=int(input("valor sorteado?"))
d2=int(input("valor sorteado?"))
r= input("numero de rodadas?")
if(d1+d2==12):
	print("CONSTRICAO")
	print(d1+d2+1)
elif(d1+d2>5):
	print("POLEN")
	print((d1+d2+1)*r)
elif(d1=>7) or (d2=>7):
	print("Entrada invalida")
else:
	print("FAQUEZA")
	print(d1*d2)
-- EXECUTION TIME:
0.267681
-- ERROR:
  File "/home/codebench/codes/1708/3060/main.py", line 10
    elif(d1=>7) or (d2=>7):
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 15:32:44) 
-- CODE:
d1=int(input("valor sorteado?"))
d2=int(input("valor sorteado?"))
r= input("numero de rodadas?")
if(d1+d2==12):
	print("CONSTRICAO")
	print(d1+d2+1)
elif(d1+d2>5):
	print("POLEN")
	print((d1+d2+1)*r)
elif(d1=>7) or (d2=>7):
	print("Entrada invalida")
else:
	print("FAQUEZA")
	print(d1*d2)
-- EXECUTION TIME:
0.197512
-- ERROR:
  File "/home/codebench/codes/1708/3060/main.py", line 10
    elif(d1=>7) or (d2=>7):
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 15:32:50) 
-- CODE:
d1=int(input("valor sorteado?"))
d2=int(input("valor sorteado?"))
r= input("numero de rodadas?")
if(d1+d2==12):
	print("CONSTRICAO")
	print(d1+d2+1)
elif(d1+d2>5):
	print("POLEN")
	print((d1+d2+1)*r)
elif(d1=>7) or (d2=>7):
	print("Entrada invalida")
else:
	print("FAQUEZA")
	print(d1*d2)
-- EXECUTION TIME:
0.153022
-- ERROR:
  File "/home/codebench/codes/1708/3060/main.py", line 10
    elif(d1=>7) or (d2=>7):
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:32:51) 
-- CODE:
d1=int(input("valor sorteado?"))
d2=int(input("valor sorteado?"))
r= input("numero de rodadas?")
if(d1+d2==12):
	print("CONSTRICAO")
	print(d1+d2+1)
elif(d1+d2>5):
	print("POLEN")
	print((d1+d2+1)*r)
elif(d1=>7) or (d2=>7):
	print("Entrada invalida")
else:
	print("FAQUEZA")
	print(d1*d2)
-- ERROR:
File "XXXX", line 10
    elif(d1=>7) or (d2=>7):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:33:13) 
-- CODE:
d1=int(input("valor sorteado?"))
d2=int(input("valor sorteado?"))
r= input("numero de rodadas?")
if(d1+d2==12):
	print("CONSTRICAO")
	print(d1+d2+1)
elif(d1+d2>5):
	print("POLEN")
	print((d1+d2+1)*r)
elif(d1 => 7) and (d2 => 7):
	print("Entrada invalida")
else:
	print("FAQUEZA")
	print(d1*d2)
-- ERROR:
File "XXXX", line 10
    elif(d1 => 7) and (d2 => 7):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 15:33:14) 
-- CODE:
d1=int(input("valor sorteado?"))
d2=int(input("valor sorteado?"))
r= input("numero de rodadas?")
if(d1+d2==12):
	print("CONSTRICAO")
	print(d1+d2+1)
elif(d1+d2>5):
	print("POLEN")
	print((d1+d2+1)*r)
elif(d1 => 7) and (d2 => 7):
	print("Entrada invalida")
else:
	print("FAQUEZA")
	print(d1*d2)
-- EXECUTION TIME:
0.190901
-- ERROR:
  File "/home/codebench/codes/1708/3060/main.py", line 10
    elif(d1 => 7) and (d2 => 7):
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:33:14) 
-- CODE:
d1=int(input("valor sorteado?"))
d2=int(input("valor sorteado?"))
r= input("numero de rodadas?")
if(d1+d2==12):
	print("CONSTRICAO")
	print(d1+d2+1)
elif(d1+d2>5):
	print("POLEN")
	print((d1+d2+1)*r)
elif(d1 => 7) and (d2 => 7):
	print("Entrada invalida")
else:
	print("FAQUEZA")
	print(d1*d2)
-- ERROR:
File "XXXX", line 10
    elif(d1 => 7) and (d2 => 7):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:33:35) 
-- CODE:
d1=int(input("valor sorteado?"))
d2=int(input("valor sorteado?"))
r= input("numero de rodadas?")
if(d1+d2==12):
	print("CONSTRICAO")
	print(d1+d2+1)
elif(d1+d2>5):
	print("POLEN")
	print((d1+d2+1)*r)
elif(d1 =< 6) and (d2 =< 6):
	print("Entrada invalida")
else:
	print("FAQUEZA")
	print(d1*d2)
-- ERROR:
File "XXXX", line 10
    elif(d1 =< 6) and (d2 =< 6):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 15:34:57) 
-- CODE:
d1=int(input("valor sorteado?"))
d2=int(input("valor sorteado?"))
r= input("numero de rodadas?")
if(d1+d2==12):
	print("CONSTRICAO")
	print(d1+d2+1)
elif(d1+d2>5):
	print("POLEN")
	print((d1+d2+1)*r)
elif(d1 <= 6) and (d2 <= 6):
	print("Entrada invalida")
else:
	print("FAQUEZA")
	print(d1*d2)
-- EXECUTION TIME:
0.148342
-- TEST CASE 1:
---- input:
5
3
8
---- correct output:
FRAQUEZA
15
---- user output:
POLEN
888888888
-- TEST CASE 2:
---- input:
7
8
5
---- correct output:
Entrada invalida
---- user output:
POLEN
5555555555555555
-- TEST CASE 3:
---- input:
1
1
9
---- correct output:
POLEN
27
---- user output:
Entrada invalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 15:35:22) 
-- CODE:
d1=int(input("valor sorteado?"))
d2=int(input("valor sorteado?"))
r= input("numero de rodadas?")
if(d1+d2==12):
	print("CONSTRICAO")
	print(d1+d2+1)
elif(d1+d2>5):
	print("POLEN")
	print((d1+d2+1)*r)
elif(d1 > 6) and (d2 >6):
	print("Entrada invalida")
else:
	print("FAQUEZA")
	print(d1*d2)
-- EXECUTION TIME:
0.183363
-- TEST CASE 1:
---- input:
5
3
8
---- correct output:
FRAQUEZA
15
---- user output:
POLEN
888888888
-- TEST CASE 2:
---- input:
7
8
5
---- correct output:
Entrada invalida
---- user output:
POLEN
5555555555555555
-- TEST CASE 3:
---- input:
1
1
9
---- correct output:
POLEN
27
---- user output:
FAQUEZA
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 15:35:22) 
-- CODE:
d1=int(input("valor sorteado?"))
d2=int(input("valor sorteado?"))
r= input("numero de rodadas?")
if(d1+d2==12):
	print("CONSTRICAO")
	print(d1+d2+1)
elif(d1+d2>5):
	print("POLEN")
	print((d1+d2+1)*r)
elif(d1 > 6) and (d2 >6):
	print("Entrada invalida")
else:
	print("FAQUEZA")
	print(d1*d2)
-- EXECUTION TIME:
0.181018
-- TEST CASE 1:
---- input:
5
3
8
---- correct output:
FRAQUEZA
15
---- user output:
POLEN
5555555555555555
-- TEST CASE 2:
---- input:
7
8
5
---- correct output:
Entrada invalida
---- user output:
POLEN
5555555555555555
-- TEST CASE 3:
---- input:
1
1
9
---- correct output:
POLEN
27
---- user output:
FAQUEZA
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 15:35:23) 
-- CODE:
d1=int(input("valor sorteado?"))
d2=int(input("valor sorteado?"))
r= input("numero de rodadas?")
if(d1+d2==12):
	print("CONSTRICAO")
	print(d1+d2+1)
elif(d1+d2>5):
	print("POLEN")
	print((d1+d2+1)*r)
elif(d1 > 6) and (d2 >6):
	print("Entrada invalida")
else:
	print("FAQUEZA")
	print(d1*d2)
-- EXECUTION TIME:
0.107097
-- TEST CASE 1:
---- input:
5
3
8
---- correct output:
FRAQUEZA
15
---- user output:
POLEN
888888888
-- TEST CASE 2:
---- input:
7
8
5
---- correct output:
Entrada invalida
---- user output:
POLEN
5555555555555555
-- TEST CASE 3:
---- input:
1
1
9
---- correct output:
POLEN
27
---- user output:
FAQUEZA
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 15:35:23) 
-- CODE:
d1=int(input("valor sorteado?"))
d2=int(input("valor sorteado?"))
r= input("numero de rodadas?")
if(d1+d2==12):
	print("CONSTRICAO")
	print(d1+d2+1)
elif(d1+d2>5):
	print("POLEN")
	print((d1+d2+1)*r)
elif(d1 > 6) and (d2 >6):
	print("Entrada invalida")
else:
	print("FAQUEZA")
	print(d1*d2)
-- EXECUTION TIME:
0.165517
-- TEST CASE 1:
---- input:
5
3
8
---- correct output:
FRAQUEZA
15
---- user output:
FAQUEZA
1
-- TEST CASE 2:
---- input:
7
8
5
---- correct output:
Entrada invalida
---- user output:
POLEN
888888888
-- TEST CASE 3:
---- input:
1
1
9
---- correct output:
POLEN
27
---- user output:
POLEN
5555555555555555
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 15:35:23) 
-- CODE:
d1=int(input("valor sorteado?"))
d2=int(input("valor sorteado?"))
r= input("numero de rodadas?")
if(d1+d2==12):
	print("CONSTRICAO")
	print(d1+d2+1)
elif(d1+d2>5):
	print("POLEN")
	print((d1+d2+1)*r)
elif(d1 > 6) and (d2 >6):
	print("Entrada invalida")
else:
	print("FAQUEZA")
	print(d1*d2)
-- EXECUTION TIME:
0.146225
-- TEST CASE 1:
---- input:
5
3
8
---- correct output:
FRAQUEZA
15
---- user output:
POLEN
888888888
-- TEST CASE 2:
---- input:
7
8
5
---- correct output:
Entrada invalida
---- user output:
POLEN
5555555555555555
-- TEST CASE 3:
---- input:
1
1
9
---- correct output:
POLEN
27
---- user output:
FAQUEZA
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:37:11) 
-- CODE:
d1=int(input("valor sorteado?"))
d2=int(input("valor sorteado?"))
r= input("numero de rodadas?")
if(d1+d2==12):
	print("CONSTRICAO")
	print(d1+d2+1)
elif(d1+d2>5):
	print("POLEN")
	print((d1+d2+1)*r)
elif(d1 > 6) and (d2 >6):
	print("Entrada invalida")
else:
	print("FAQUEZA")
	print(d1*d2)
-- OUTPUT:
POLEN
888888888
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:37:28) 
-- CODE:
d1=int(input("valor sorteado?"))
d2=int(input("valor sorteado?"))
r= input("numero de rodadas?")
if(d1+d2==12):
	print("CONSTRICAO")
	print(d1+d2+1)
elif(d1+d2>5):
	print("POLEN")
	print((d1+d2+1)*r)
elif(d1 > 6) and (d2 >6):
	print("Entrada invalida")
else:
	print("FAQUEZA")
	print(d1*d2)
-- OUTPUT:
POLEN
888888888
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:37:40) 
-- CODE:
d1=int(input("valor sorteado?"))
d2=int(input("valor sorteado?"))
r= input("numero de rodadas?")
if(d1+d2==12):
	print("CONSTRICAO")
	print(d1+d2+1)
elif(d1+d2>5):
	print("POLEN")
	print((d1+d2+1)*r)
elif(d1 > 6) and (d2 >6):
	print("Entrada invalida")
else:
	print("FAQUEZA")
	print(d1*d2)
-- OUTPUT:
POLEN
888888888
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:37:50) 
-- CODE:
d1=int(input("valor sorteado?"))
d2=int(input("valor sorteado?"))
r= input("numero de rodadas?")
if(d1+d2==12):
	print("CONSTRICAO")
	print(d1+d2+1)
elif(d1+d2>5):
	print("POLEN")
	print((d1+d2+1)*r)
elif(d1 > 6) and (d2 >6):
	print("Entrada invalida")
else:
	print("FAQUEZA")
	print(d1*d2)
-- OUTPUT:
POLEN
888888888
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:38:03) 
-- CODE:
d1=int(input("valor sorteado?"))
d2=int(input("valor sorteado?"))
r= input("numero de rodadas?")
if(d1+d2==12):
	print("CONSTRICAO")
	print(d1+d2+1)
elif(d1+d2>5):
	print("POLEN")
	print((d1+d2+1)*r)
elif(d1 > 6) and (d2 >6):
	print("Entrada invalida")
else:
	print("FAQUEZA")
	print(d1*d2)
-- OUTPUT:
POLEN
888888888
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:38:10) 
-- CODE:
d1=int(input("valor sorteado?"))
d2=int(input("valor sorteado?"))
r= input("numero de rodadas?")
if(d1+d2==12):
	print("CONSTRICAO")
	print(d1+d2+1)
elif(d1+d2>5):
	print("POLEN")
	print((d1+d2+1)*r)
else:
	print("FAQUEZA")
	print(d1*d2)
-- OUTPUT:
POLEN
888888888
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:39:56) 
-- CODE:
d1=int(input("valor sorteado?"))
d2=int(input("valor sorteado?"))
r= input("numero de rodadas?")
if(d1+d2==12):
	print("CONSTRICAO")
	print(d1+d2+1)
elif(d1+d2>5):
	print("POLEN")
	print((d1+d2+1)*r)
elif:
	print("FRAQUESA")
	print(d1*d2)

-- ERROR:
File "XXXX", line 10
    elif:
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:40:03) 
-- CODE:
d1=int(input("valor sorteado?"))
d2=int(input("valor sorteado?"))
r= input("numero de rodadas?")
if(d1+d2==12):
	print("CONSTRICAO")
	print(d1+d2+1)
elif(d1+d2>5):
	print("POLEN")
	print((d1+d2+1)*r)
else:
	print("FRAQUESA")
	print(d1*d2)

-- OUTPUT:
POLEN
888888888
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:42:27) 
-- CODE:
d1=int(input("valor sorteado?"))
d2=int(input("valor sorteado?"))
r= input("numero de rodadas?")
if(d1+d2==12):
	print("CONSTRICAO")
	print(d1+d2+1)
elif(d1+d2>5):
	print("POLEN")
	print((d1+d2+1)*r)
else("caso contrario"):
	print("FRAQUESA")
	print(d1*d2)

-- ERROR:
File "XXXX", line 10
    else("caso contrario"):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:42:39) 
-- CODE:
d1=int(input("valor sorteado?"))
d2=int(input("valor sorteado?"))
r= input("numero de rodadas?")
if(d1+d2==12):
	print("CONSTRICAO")
	print(d1+d2+1)
elif(d1+d2>5):
	print("POLEN")
	print((d1+d2+1)*r)
elif("caso contrario"):
	print("FRAQUESA")
	print(d1*d2)

-- OUTPUT:
POLEN
888888888
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:44:19) 
-- CODE:
d1=int(input("valor sorteado?"))
d2=int(input("valor sorteado?"))
r= input("numero de rodadas?")
if(d1+d2==12):
	print("CONSTRICAO")
	print(d1+d2+1)
elif(d1+d2>5):
	print("POLEN")
	print((d1+d2+1)*r)
elif(d1+d2=<4):
	print("FRAQUESA")
	print(d1*d2)

-- ERROR:
File "XXXX", line 10
    elif(d1+d2=<4):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:44:26) 
-- CODE:
d1=int(input("valor sorteado?"))
d2=int(input("valor sorteado?"))
r= input("numero de rodadas?")
if(d1+d2==12):
	print("CONSTRICAO")
	print(d1+d2+1)
elif(d1+d2>5):
	print("POLEN")
	print((d1+d2+1)*r)
elif(d1+d2<4):
	print("FRAQUESA")
	print(d1*d2)

-- OUTPUT:
POLEN
888888888
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:44:42) 
-- CODE:
d1=int(input("valor sorteado?"))
d2=int(input("valor sorteado?"))
r= input("numero de rodadas?")
if(d1+d2==12):
	print("CONSTRICAO")
	print(d1+d2+1)
elif(d1+d2>5):
	print("POLEN")
	print((d1+d2+1)*r)
elif(d1+d2<4):
	print("FRAQUESA")
	print(d1*d2)

-- OUTPUT:
POLEN
888888888
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 15:45:10) 
-- CODE:
d1=int(input("valor sorteado?"))
d2=int(input("valor sorteado?"))
r= input("numero de rodadas?")
if(d1+d2==12):
	print("CONSTRICAO")
	print(d1+d2+1)
elif(d1+d2>5):
	print("POLEN")
	print((d1+d2+1)*r)
elif(d1+d2!=4):
	print("FRAQUESA")
	print(d1*d2)

-- EXECUTION TIME:
0.136015
-- TEST CASE 1:
---- input:
5
3
8
---- correct output:
FRAQUEZA
15
---- user output:
POLEN
888888888
-- TEST CASE 2:
---- input:
7
8
5
---- correct output:
Entrada invalida
---- user output:
POLEN
5555555555555555
-- TEST CASE 3:
---- input:
1
1
9
---- correct output:
POLEN
27
---- user output:
FRAQUESA
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:45:11) 
-- CODE:
d1=int(input("valor sorteado?"))
d2=int(input("valor sorteado?"))
r= input("numero de rodadas?")
if(d1+d2==12):
	print("CONSTRICAO")
	print(d1+d2+1)
elif(d1+d2>5):
	print("POLEN")
	print((d1+d2+1)*r)
elif(d1+d2!=4):
	print("FRAQUESA")
	print(d1*d2)

-- OUTPUT:
POLEN
888888888
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:46:08) 
-- CODE:
d1=int(input("valor sorteado?"))
d2=int(input("valor sorteado?"))
r= input("numero de rodadas?")
if(d1+d2==12):
	print("CONSTRICAO")
	print(d1+d2+1)
elif(d1+d2>5):
	print("POLEN")
	print((d1+d2+1)*r)
elif(d1+d2!=5)and(d1+d2!=12):
	print("FRAQUESA")
	print(d1*d2)

-- OUTPUT:
POLEN
888888888
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:46:27) 
-- CODE:
d1=int(input("valor sorteado?"))
d2=int(input("valor sorteado?"))
r= input("numero de rodadas?")
if(d1+d2==12):
	print("CONSTRICAO")
	print(d1+d2+1)
elif(d1+d2>5):
	print("POLEN")
	print((d1+d2+1)*r)
elif(d1+d2!=5)and(d1+d2!=12):
	print("FRAQUESA")
	print(d1*d2)

-- OUTPUT:
POLEN
888888888
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 15:46:50) 
-- CODE:
d1=int(input("valor sorteado?"))
d2=int(input("valor sorteado?"))
r= input("numero de rodadas?")
if(d1+d2==12):
	print("CONSTRICAO")
	print(d1+d2+1)
elif(d1+d2>5):
	print("POLEN")
	print((d1+d2+1)*r)
elif(d1+d2!=5)or(d1+d2!=12):
	print("FRAQUESA")
	print(d1*d2)

-- EXECUTION TIME:
0.168796
-- TEST CASE 1:
---- input:
5
3
8
---- correct output:
FRAQUEZA
15
---- user output:
POLEN
888888888
-- TEST CASE 2:
---- input:
7
8
5
---- correct output:
Entrada invalida
---- user output:
POLEN
5555555555555555
-- TEST CASE 3:
---- input:
1
1
9
---- correct output:
POLEN
27
---- user output:
FRAQUESA
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:46:50) 
-- CODE:
d1=int(input("valor sorteado?"))
d2=int(input("valor sorteado?"))
r= input("numero de rodadas?")
if(d1+d2==12):
	print("CONSTRICAO")
	print(d1+d2+1)
elif(d1+d2>5):
	print("POLEN")
	print((d1+d2+1)*r)
elif(d1+d2!=5)or(d1+d2!=12):
	print("FRAQUESA")
	print(d1*d2)

-- OUTPUT:
POLEN
888888888
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:47:29) 
-- CODE:
d1=int(input("valor sorteado?"))
d2=int(input("valor sorteado?"))
r= input("numero de rodadas?")
if(d1+d2==12):
	print("CONSTRICAO")
	print(d1+d2+1)
elif(d1+d2>5):
	print("POLEN")
	print((d1+d2+1)*r)
elif(d1+d2!=5)or(d1+d2!=12):
	print("FRAQUESA")
	print(d1*d2)

-- OUTPUT:
POLEN
888888888
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:49:14) 
-- CODE:
d1=int(input("valor sorteado?"))
d2=int(input("valor sorteado?"))
r= input("numero de rodadas?")
if(d1+d2==12):
	print("CONSTRICAO")
	print(d1+d2+1)
elif(d1+d2>5):
	print("POLEN")
	print((d1+d2+1)*r)
elif(d1+d2!=5)or(d1+d2!=12):
	print("FRAQUESA")
	print(d1*d2)
elif(r=>6):
	print("Entrada invalida")
-- ERROR:
File "XXXX", line 13
    elif(r=>6):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:49:23) 
-- CODE:
d1=int(input("valor sorteado?"))
d2=int(input("valor sorteado?"))
r= input("numero de rodadas?")
if(d1+d2==12):
	print("CONSTRICAO")
	print(d1+d2+1)
elif(d1+d2>5):
	print("POLEN")
	print((d1+d2+1)*r)
elif(d1+d2!=5)or(d1+d2!=12):
	print("FRAQUESA")
	print(d1*d2)
elif(r>6):
	print("Entrada invalida")
-- OUTPUT:
POLEN
888888888
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:49:30) 
-- CODE:
d1=int(input("valor sorteado?"))
d2=int(input("valor sorteado?"))
r= input("numero de rodadas?")
if(d1+d2==12):
	print("CONSTRICAO")
	print(d1+d2+1)
elif(d1+d2>5):
	print("POLEN")
	print((d1+d2+1)*r)
elif(d1+d2!=5)or(d1+d2!=12):
	print("FRAQUESA")
	print(d1*d2)
elif(r>6):
	print("Entrada invalida")
-- OUTPUT:
POLEN
888888888
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:49:41) 
-- CODE:
d1=int(input("valor sorteado?"))
d2=int(input("valor sorteado?"))
r= input("numero de rodadas?")
if(d1+d2==12):
	print("CONSTRICAO")
	print(d1+d2+1)
elif(d1+d2>5):
	print("POLEN")
	print((d1+d2+1)*r)
elif(d1+d2!=5)or(d1+d2!=12):
	print("FRAQUESA")
	print(d1*d2)
elif(r>6):
	print("Entrada invalida")
-- OUTPUT:
POLEN
888888888
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:50:14) 
-- CODE:
d1=int(input("valor sorteado?"))
d2=int(input("valor sorteado?"))
r= input("numero de rodadas?")
if(d1+d2==12):
	print("CONSTRICAO")
	print(d1+d2+1)
elif(d1+d2>5):
	print("POLEN")
	print(d1+d2+1*r)
elif(d1+d2!=5)or(d1+d2!=12):
	print("FRAQUESA")
	print(d1*d2)
elif(r>6):
	print("Entrada invalida")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(d1+d2+1*r)
TypeError: unsupported operand type(s) for +: 'int' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:50:21) 
-- CODE:
d1=int(input("valor sorteado?"))
d2=int(input("valor sorteado?"))
r= input("numero de rodadas?")
if(d1+d2==12):
	print("CONSTRICAO")
	print(d1+d2+1)
elif(d1+d2>5):
	print("POLEN")
	print(d1+d2+1*r)
elif(d1+d2!=5)or(d1+d2!=12):
	print("FRAQUESA")
	print(d1*d2)
elif(r>6):
	print("Entrada invalida")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(d1+d2+1*r)
TypeError: unsupported operand type(s) for +: 'int' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:50:30) 
-- CODE:
d1=int(input("valor sorteado?"))
d2=int(input("valor sorteado?"))
r= input("numero de rodadas?")
if(d1+d2==12):
	print("CONSTRICAO")
	print(d1+d2+1)
elif(d1+d2>5):
	print("POLEN")
	print(d1+d2+1*r)
elif(d1+d2!=5)or(d1+d2!=12):
	print("FRAQUESA")
	print(d1*d2)
elif(r>6):
	print("Entrada invalida")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(d1+d2+1*r)
TypeError: unsupported operand type(s) for +: 'int' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:51:08) 
-- CODE:
d1=int(input("valor sorteado?"))
d2=int(input("valor sorteado?"))
r= input("numero de rodadas?")
if(d1+d2==12):
	print("CONSTRICAO")
	print(d1+d2+1)
elif(d1+d2>5):
	print("POLEN")
	print((d1+d2+1)*r)
elif(r>6):
	print("Entrada invalida")
-- OUTPUT:
POLEN
888888888
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:51:30) 
-- CODE:
d1=int(input("valor sorteado?"))
d2=int(input("valor sorteado?"))
r= int(input("numero de rodadas?"))
if(d1+d2==12):
	print("CONSTRICAO")
	print(d1+d2+1)
elif(d1+d2>5):
	print("POLEN")
	print((d1+d2+1)*r)
elif(r>6):
	print("Entrada invalida")
-- OUTPUT:
POLEN
72
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:51:42) 
-- CODE:
d1=int(input("valor sorteado?"))
d2=int(input("valor sorteado?"))
r= int(input("numero de rodadas?"))
if(d1+d2==12):
	print("CONSTRICAO")
	print(d1+d2+1)
elif(d1+d2>5):
	print("POLEN")
	print((d1+d2+1)*r)
elif(r>6):
	print("Entrada invalida")
-- OUTPUT:
POLEN
72
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:51:54) 
-- CODE:
d1=int(input("valor sorteado?"))
d2=int(input("valor sorteado?"))
r= int(input("numero de rodadas?"))
if(d1+d2==12):
	print("CONSTRICAO")
	print(d1+d2+1)
elif(d1+d2>5):
	print("POLEN")
	print((d1+d2+1)*r)
elif(r=>6):
	print("Entrada invalida")
-- ERROR:
File "XXXX", line 10
    elif(r=>6):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 15:52:27) 
-- CODE:
d1=int(input("valor sorteado?"))
d2=int(input("valor sorteado?"))
r= int(input("numero de rodadas?"))
if(d1+d2==12):
	print("CONSTRICAO")
	print(d1+d2+1)
elif(d1+d2>5):
	print("POLEN")
	print((d1+d2+1)*r)
elif(r=>6):
	print("Entrada invalida")
-- EXECUTION TIME:
0.140538
-- ERROR:
  File "/home/codebench/codes/1708/3060/main.py", line 10
    elif(r=>6):
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:52:27) 
-- CODE:
d1=int(input("valor sorteado?"))
d2=int(input("valor sorteado?"))
r= int(input("numero de rodadas?"))
if(d1+d2==12):
	print("CONSTRICAO")
	print(d1+d2+1)
elif(d1+d2>5):
	print("POLEN")
	print((d1+d2+1)*r)
elif(r=>6):
	print("Entrada invalida")
-- ERROR:
File "XXXX", line 10
    elif(r=>6):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:52:42) 
-- CODE:
d1=int(input("valor sorteado?"))
d2=int(input("valor sorteado?"))
r= int(input("numero de rodadas?"))
if(d1+d2==12):
	print("CONSTRICAO")
	print(d1+d2+1)
elif(d1+d2>5):
	print("POLEN")
	print((d1+d2+1)*r)
elif(r=<6):
	print("Entrada invalida")
-- ERROR:
File "XXXX", line 10
    elif(r=<6):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:52:55) 
-- CODE:
d1=int(input("valor sorteado?"))
d2=int(input("valor sorteado?"))
r= int(input("numero de rodadas?"))
if(d1+d2==12):
	print("CONSTRICAO")
	print(d1+d2+1)
elif(d1+d2>5):
	print("POLEN")
	print((d1+d2+1)*r)
elif(r<=6):
	print("Entrada invalida")
-- OUTPUT:
POLEN
72
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:53:19) 
-- CODE:
d1=int(input("valor sorteado?"))
d2=int(input("valor sorteado?"))
r= int(input("numero de rodadas?"))
if(d1+d2==12):
	print("CONSTRICAO")
	print(d1+d2+1)
elif(d1+d2>5):
	print("POLEN")
	print((d1+d2+1)*r)
elif(r>=6):
	print("Entrada invalida")
-- OUTPUT:
POLEN
72
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:53:37) 
-- CODE:
d1=int(input("valor sorteado?"))
d2=int(input("valor sorteado?"))
r= int(input("numero de rodadas?"))
if(d1+d2==12):
	print("CONSTRICAO")
	print(d1+d2+1)
elif(d1+d2>5):
	print("POLEN")
	print((d1+d2+1)*r)
elif(r>=6):
	print("Entrada invalida")
-- OUTPUT:
POLEN
72
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:53:50) 
-- CODE:
d1=int(input("valor sorteado?"))
d2=int(input("valor sorteado?"))
r= int(input("numero de rodadas?"))
if(d1+d2==12):
	print("CONSTRICAO")
	print(d1+d2+1)
elif(d1+d2>5):
	print("POLEN")
	print((d1+d2+1)*r)
elif(r>6):
	print("Entrada invalida")
-- OUTPUT:
POLEN
72
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
